RESOLVED FIXED 98369
[GTK] accessibility/language-attribute.html is failing
https://bugs.webkit.org/show_bug.cgi?id=98369
Summary [GTK] accessibility/language-attribute.html is failing
Zan Dobersek
Reported 2012-10-04 00:41:29 PDT
Attachments
Patch (7.72 KB, patch)
2012-12-09 16:13 PST, Joanmarie Diggs
no flags
Joanmarie Diggs
Comment 1 2012-10-16 13:01:04 PDT
This is failing for two reasons: * We're not exposing the language for the object (should be an AtkText attribute) * AccessibilityUIElement::language() needs to be implemented
Joanmarie Diggs
Comment 2 2012-12-09 16:13:21 PST
Joanmarie Diggs
Comment 3 2012-12-09 16:40:46 PST
Comment on attachment 178447 [details] Patch EWS all green, small patch, hoping it will pass Martin's review, so cq?ing.
chris fleizach
Comment 4 2012-12-09 23:45:52 PST
Comment on attachment 178447 [details] Patch looks good
WebKit Review Bot
Comment 5 2012-12-10 00:18:53 PST
Comment on attachment 178447 [details] Patch Clearing flags on attachment: 178447 Committed r137114: <http://trac.webkit.org/changeset/137114>
WebKit Review Bot
Comment 6 2012-12-10 00:18:56 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.