[GTK] accessibility/language-attribute.html is failing https://bugs.webkit.org/show_bug.cgi?id=98369

Patch by Joanmarie Diggs <jdiggs@igalia.com> on 2012-12-10
Reviewed by Chris Fleizach.

The test is failing for two reasons: Not exposing the language
for accessible objects and AccessibilityUIElement::language() not
being implemented.

Source/WebCore:

No new tests; instead, unskipped the previously-failing test.

* accessibility/atk/WebKitAccessibleInterfaceText.cpp:
(getAttributeSetForAccessibilityObject): Expose the language via AtkText attribute

Tools:

* DumpRenderTree/gtk/AccessibilityUIElementGtk.cpp:
(AccessibilityUIElement::language): Implemented.

LayoutTests:

* accessibility/language-attribute.html: Modified the test to work with
both Mac and Atk platforms. (The former exposes static text objects as
accessibles; the latter folds the text into the parent element.)
* platform/gtk/TestExpectations: Unskipped the previously-failing test.

Canonical link: https://commits.webkit.org/122673@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137114 268f45cc-cd09-0410-ab3c-d52691b4dbfc